--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 
 <html lang="ru">
   <head>
+    <link rel="stylesheet" href="styles/styles.css"/>
     <meta charset="utf-8"/>
-    <title>Pug. Начало работы</title>
   </head>
   <body>
-    <h1>Hello, 111!</h1>
+    <html lang="ru">
+      <head>
+        <link href="styles/styles.css"/>
+        <meta charset="utf-8"/>
+      </head>
+      <body>
+        <nav>
+          <div class="logo"><img class="logo__image" src="images/logo.svg" alt="Logo"/><img class="logo__company-name" src="images/TOXIN.svg" alt="TOXIN"/></div>
+          <div class="nav-links"><a>О нас</a><a>Услуги</a>
+            <p></p><a>Вакансии</a><a>Новости</a><a>Соглашения</a>
+          </div>
+        </nav>
+      </body>
+    </html>
   </body>
 </html>
