--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-
-<html lang="ru">
-  <head>
-    <link rel="stylesheet" href="styles/styles.css"/>
-    <meta charset="utf-8"/>
-  </head>
-  <body>
-    <html lang="ru">
-      <head>
-        <link href="styles/styles.css"/>
-        <meta charset="utf-8"/>
-      </head>
-      <body>
-        <nav>
-          <div class="logo"><img class="logo__image" src="images/logo.svg" alt="Logo"/><img class="logo__company-name" src="images/TOXIN.svg" alt="TOXIN"/></div>
-          <div class="nav-links"><a>О нас</a><a>Услуги</a>
-            <p></p><a>Вакансии</a><a>Новости</a><a>Соглашения</a>
-          </div>
-        </nav>
-      </body>
-    </html>
-  </body>
-</html>
+<html lang="ru"><head><link rel="stylesheet" href="styles/styles.css"/><meta charset="utf-8"/></head><body><html lang="ru"><head><link href="styles/styles.css"/><meta charset="utf-8"/></head><body><nav><div class="logo"><img class="logo__image" src="images/logo.svg" alt="Logo"/><img class="logo__company-name" src="images/TOXIN.svg" alt="TOXIN"/></div><div class="nav-links"><a>О нас</a><button><p>Услуги</p></button><a>Вакансии</a><a>Новости</a><button><p>Соглашения</p></button></div></nav></body></html></body></html>
